# Mental-Health-RAG-Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.plan/: MASTER_PLAN.md  MILESTONE1.md  MILESTONE2.md
_notes/: [0]project_history.md  [1]setup_process.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: health.py
backend/app/core/: config.py
docs/: AGENT.md  DFD.md  SRDS.md
frontend/: main.py  pyproject.toml
