[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "awun0105", email = "anhquanlam2002@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.3",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "pydantic-settings>=2.13.1",
    "qdrant-client>=1.17.1",
    "uvicorn>=0.44.0",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
# Tự động coi các hàm test async là bài test bất đồng bộ mà không cần phải viết @pytest.mark.asyncio trước mỗi hàm
asyncio_mode = "auto"
# Thư mục chứa code test
testpaths = ["tests"]
