[project]
name = "frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "awun0105", email = "anhquanlam2002@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.33.1",
    "streamlit>=1.56.0",
]

[project.scripts]
frontend = "frontend:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = false
